test_outputs/connlist/exposure_test_egress_with_named_port_with_matching_pod_exposure_output.txt
0.0.0.0-255.255.255.255[External] => matching-ns/matching-workload[Deployment] : All Connections
hello-world/workload-a[Deployment] => matching-ns/matching-workload[Deployment] : TCP 8090
matching-ns/matching-workload[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload[Deployment] => hello-world/workload-a[Deployment] : TCP 8000

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment]        	=> 	[namespace with {{Key:foo.com/managed-state,Operator:In,Values:[managed],}}]/[all pods] : TCP http
matching-ns/matching-workload[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload[Deployment] 	=> 	entire-cluster : All Connections

Ingress Exposure:
hello-world/workload-a[Deployment]        	<= 	entire-cluster : TCP 8000
matching-ns/matching-workload[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
matching-ns/matching-workload[Deployment] 	<= 	entire-cluster : All Connections

Workloads not protected by network policies:
matching-ns/matching-workload[Deployment] is not protected on Egress
matching-ns/matching-workload[Deployment] is not protected on Ingress
